# pdf_parser

./: .editorconfig  .gitignore  Dockerfile.sample  README.md  README_old.md  converter.py  r.txt  requirements.txt
components/questionnaire_api/: alembic.ini  setup.cfg  setup.py
components/questionnaire_api/questionnaire/adapters/app_storage/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
components/questionnaire_api/questionnaire/adapters/app_storage/alembic/: env.py
components/questionnaire_api/questionnaire/adapters/app_storage/alembic/versions/: 2022_02_03_1454_init_db.py  2022_02_03_1908_add_email_table.py  2022_02_23_2325_extend_emal_table.py  2022_02_24_1059_extend_emal_table_2.py  2022_02_27_1720_add_questionnaire_types.py
components/questionnaire_api/questionnaire/adapters/http_api/: __init__.py  app.py  controllers.py  handlers.py  join_points.py  settings.py
components/questionnaire_api/questionnaire/adapters/log/: config.py  settings.py
components/questionnaire_api/questionnaire/adapters/mail_sender/: __init__.py  sender.py  settings.py
components/questionnaire_api/questionnaire/adapters/message_bus/: __init__.py  consumer.py  scheme.py  settings.py
components/questionnaire_api/questionnaire/application/: dataclasses.py  interfaces.py  services.py
components/questionnaire_api/questionnaire/application/dashboard/: constants.py  interfaces.py  services.py
components/questionnaire_api/questionnaire/composites/: http_api.py  worker.py
docs/: deployment.puml  deployment.wsd  openapi.yaml  schema.wsd
(+3 files in other folders)
