[metadata]
name = questionnaire
version = 0.0.1
description = Обработчик опросников врачей
author = Anton Ivankin
author_email = anton.ivankin@gmail.com


[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    attrs~=21.2.0
    SQLAlchemy~=1.4.18
    sqlalchemy-utils~=0.37.8
    alembic~=1.5.2
    pydantic~=1.8.2
    pydantic[dotenv]~=1.8.2
    pydantic[email]~=1.8.2
    gunicorn~=20.0.4
    gevent~=21.1.2
    falcon-cors~=1.1.7
    falcon-multipart~=0.2.0
    passlib~=1.7.4
    python-json-logger~=2.0.0
    pytz~=2021.3
;    pandas~=1.1.5
;    pdfminer.six~=20181108
;    pdfminer2~=20151206
;    tabula-py~=2.2.0
;    chardet~=4.0.0
;    progressbar~=2.5
;    xlrd~=1.2.0
;    openpyxl~=3.0.7
;    dateparser~=1.0.0
    classic-http-api~=0.0.2
    classic-sql-storage~=0.0.1
    classic-app-layer~=0.0.1
    classic-components~=0.0.1
    classic-aspects~=0.0.1
    classic-messaging-kombu~=0.0.3
    classic-messaging~=0.0.2
    backports.cached-property~=1.0.1

[options.extras_require]
dev =
    pytest~=6.2.2
    pytest-cov~=2.11.1
    requests~=2.25.1